@@ -4,6 +4,7 @@
 
 \alias{freq}
 \alias{freq,RasterLayer-method}
+\alias{freq,RasterStackBrick-method}
 
 \title{Frequency table}
 
@@ -13,18 +14,21 @@ Frequency table of the values of a RasterLayer.
 
 \usage{
 \S4method{freq}{RasterLayer}(x, digits=0, useNA='ifany', progress='', ...)
+
+\S4method{freq}{RasterStackBrick}(x, digits=0, useNA='ifany', merge=FALSE, progress='', ...)
 }
 
 \arguments{
   \item{x}{RasterLayer}
-  \item{digits}{Non-negative integer for rounding the cell values. Argument is passed to \code{\link[base]{round}} }
-  \item{useNA}{Character. What to do with NA values? Options are "no", "ifany", "always". See to \code{\link[base]{table}} }
-  \item{progress}{Character to specify a progress bar. Choose from 'text', 'window', or '' (the default, no progress bar)}
-  \item{...}{Additional arguments (none implemented)}
+  \item{digits}{non-negative integer for rounding the cell values. Argument is passed to \code{\link[base]{round}} }
+  \item{useNA}{character. What to do with NA values? Options are "no", "ifany", "always". See to \code{\link[base]{table}} }
+  \item{progress}{character to specify a progress bar. Choose from 'text', 'window', or '' (the default, no progress bar)}
+  \item{merge}{logical. If \code{TRUE} the list will be merged in a single data.frame}
+  \item{...}{additional arguments (none implemented)}
 }
 
 \value{
-matrix
+matrix (RasterLayer). List of matrices (one for each layer) or data.frame (if \code{merge=TRUE}) (RasterStack or RasterBrick)
 }
 
 \seealso{ \code{\link[raster]{count}}, \code{\link[raster]{crosstab} } and \code{\link[raster]{zonal} } }
@@ -36,6 +40,10 @@ r <- raster(nrow=18, ncol=36)
 r[] <- runif(ncell(r))
 r <- r * r * r * 10
 freq(r)
+
+s <- stack(r, r*2, r*3)
+freq(s, merge=TRUE)
+
 }
 
 \keyword{spatial}
